tests/fixtures/invalid/dict_div_int.py
# Cannot divide Dict[str, int] and Int
x: float = {"a": 1} / 1
